Fixed interest card image stretching bug

--- a/sass/components/_resourcecard.scss
+++ b/sass/components/_resourcecard.scss
@@ -53,6 +53,7 @@
   &-img {
     width: 75%;
     height: 75%;
+    object-fit: contain;
 
     @media only screen and (max-width: 600px) {
       width: 60%;
